--- a/Tuan4_QuachPhanDucThinh/Views/Shared/_Layout.cshtml
+++ b/Tuan4_QuachPhanDucThinh/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.Partial("~/Views/GioHang/GioHangPartial.cshtml")</li>
+                    <li>@Html.ActionLink("Đăng ký", "DangKy", "NguoiDung")</li>
+                    <li>@Html.ActionLink("Đăng nhập", "DangNhap", "NguoiDung")</li>
 
                 </ul>
             </div>
